Adicionado resultados de veiculos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-search-engine-car></app-search-engine-car>
+<div class="row">
+<div class="col-md-4">
+    <app-search-engine-car></app-search-engine-car>
+</div>
+<div class="col-md-8 store-ct-righ">
+    <app-car-result></app-car-result>
+</div>
+</div>
